src/objects/Apttus_Echosign__ApttusAdobeESignatureProperties__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Apttus-Adobe eSignature Properties - Holds the org level settings for the Apttus-Adobe eSignature connector</description>
    <fields>
        <fullName>Apttus_Echosign__BypassSharing__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether apex code can bypass record sharing</description>
        <inlineHelpText>Indicates whether apex code can bypass record sharing</inlineHelpText>
        <label>Bypass Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Echosign__DoNotCopySignedDocuments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the signed document will not be copied back to Apttus agreement record. This setting can be utilized to get all the relevant documents through File Mapping.</description>
        <inlineHelpText>If checked, the signed document will not be copied back to Apttus agreement record. This setting can be utilized to get all the relevant documents through File Mapping.</inlineHelpText>
        <label>Don&apos;t Copy Signed Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Echosign__EnableTemplateFiltering__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether agreement templates must be filtered according to the agreement type.</description>
        <inlineHelpText>Indicates whether agreement templates must be filtered according to the agreement type.</inlineHelpText>
        <label>Enable Template Filtering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Echosign__ForceTemplateSelection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, it will make the Adobe agreement template and attachment selection mandatory on the user interface.</description>
        <inlineHelpText>If checked, it will make the Adobe agreement template and attachment selection mandatory on the user interface.</inlineHelpText>
        <label>Force Selections</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Echosign__HideRelatedAgreementsSelection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, users will not see an option to select the related/parent/sibling/child agreements on the select attachment user interface.</description>
        <inlineHelpText>If checked, users will not see an option to select the related/parent/sibling/child agreements on the select attachment user interface.</inlineHelpText>
        <label>Hide Related Agreement Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Echosign__UpdateRelatedAgreements__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the status of the related/parent/sibling/child agreements will be updated if they are selected while sending for eSignature. Also, the signed documents will be returned back to the related/parent/sibling/child agreement if the Adobe&apos;s custom setting for getting signed document as separate is checked.</description>
        <inlineHelpText>If checked, the status of the related/parent/sibling/child agreements will be updated if they are selected while sending for eSignature. Also, the signed documents will be returned back to the respective related/parent/sibling/child agreement.</inlineHelpText>
        <label>Update Related Agreements</label>
        <type>Checkbox</type>
    </fields>
    <label>Apttus-Adobe eSignature Properties</label>
</CustomObject>